# Firewall

./: .gitignore  CMakeLists.txt  README.md  attacker.c  build.bat  build.sh  firewall.conf.example  main.c  resources.rc  resources.res
.amazonq/rules/: firewall.md
src/blocklist/: blocklist.c  blocklist.h
src/capture/: capture.c  capture.h
src/core/: config.c  config.h
src/filter/: filter.c  filter.h
src/logger/: logger.c  logger.h
src/redirect/: redirect.c  redirect.h
src/web/: web.c  web.h
